[metadata]
name = xion
version = 0.0.2
description = JSON interface to Xfconf
long_description = file: README.md
license = MIT
author = dece
author-email = shgck@pistache.land
home-page = https://github.com/Dece/Xion
classifiers =
  Environment :: Console
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
packages = xion
python_requires = >= 3.7
setup_requires = setuptools >= 38.3.0

[options.entry_points]
console_scripts =
  xion = xion.__main__:main
